# python-project-50

./: Makefile  README.md  coverage.xml  gendiff.cast  project-demo.cast  pyproject.toml
.github/workflows/: code-quality.yml  pylint.yml
gendiff/formats/: json_.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file2.yml  result_json.txt
