[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["CherSula <chers1303@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"},]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
pyyaml = "^6.0.1"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
